force-app/main/default/objects/scan__c/scan__c.object-meta.xml
<CustomObject>
    <label>scan</label>
    <nameField>
        <label>scan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>scan</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>