force-app/main/default/objects/scan__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Name</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Scans</relationshipLabel>
    <relationshipName>Scan</relationshipName>
    <type>Lookup</type>
</CustomField>