force-app/main/default/objects/scan__c/fields/Critical__c.field-meta.xml
<CustomField>
    <fullName>Critical__c</fullName>
    <label>Critical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>