force-app/main/default/objects/scan__c/fields/Critical_Number__c.field-meta.xml
<CustomField>
    <fullName>Critical_Number__c</fullName>
    <label>Critical Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>