force-app/main/default/objects/scan__c/fields/High_Number__c.field-meta.xml
<CustomField>
    <fullName>High_Number__c</fullName>
    <label>High Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>