force-app/main/default/objects/scan__c/fields/Low_Number__c.field-meta.xml
<CustomField>
    <fullName>Low_Number__c</fullName>
    <label>Low Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>