force-app/main/default/objects/scan__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>