force-app/main/default/objects/scan__c/fields/Name_of_Scan__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Scan__c</fullName>
    <label>Name of Scan</label>
    <length>25</length>
    <type>Text</type>
</CustomField>