force-app/main/default/objects/scan__c/fields/Scan_Type__c.field-meta.xml
<CustomField>
    <fullName>Scan_Type__c</fullName>
    <label>Scan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SCAVA</fullName>
            </value>
            <value>
                <fullName>BAVA</fullName>
            </value>
            <value>
                <fullName>CAVA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>