force-app/main/default/objects/scan__c/validationRules/Application_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Name_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Application_Name__c )</errorConditionFormula>
    <errorDisplayField>Application_Name__c</errorDisplayField>
    <errorMessage>Application Name Shouldn&apos;t Be blank</errorMessage>
</ValidationRule>