force-app/main/default/objects/scan__c/validationRules/Application_name_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_name_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Application_Name__c )</errorConditionFormula>
    <errorDisplayField>Application_Name__c</errorDisplayField>
    <errorMessage>Application name should not be blank</errorMessage>
</ValidationRule>