force-app/main/default/objects/scan__c/listViews/Admin_scan.listView-meta.xml
<ListView>
    <fullName>Admin_scan</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin</label>
    <queue>Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>