force-app/main/default/objects/scan__c/listViews/Supervisor_scan.listView-meta.xml
<ListView>
    <fullName>Supervisor_scan</fullName>
    <filterScope>Queue</filterScope>
    <label>Supervisor</label>
    <queue>Supervisor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>